syntax = "proto3";

option go_package = "./;generated";

package users.v1;

import "subscription_message.proto";

message SubscriptionResponse {
  SubscriptionMessage update = 2;
}

